--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+    <canvas id="Canvas" width="400" height="400"></canvas>
+    <br>
+    <input id="circle-button" type="button" value="Circle">
+    <input id="rectangle-button" type="button" value="Rectangle">
+    <input id="triangle-button" type="button" value="Triangle">
+    <br>
+    <input id="color-input" type="color">
+    <input id="size-input" type="range">
+
+    <br>
+    <input id="undo-button" type="button" value="Undo">
+    <input id="clear-button" type="button" value="Clear">
     <script src="script.js"></script>
 </body>
 
