--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <canvas id="Canvas" width="400" height="400"></canvas>
+    <canvas id="canvas" width="400" height="400"></canvas>
     <br>
     <input id="circle-button" type="button" value="Circle">
     <input id="rectangle-button" type="button" value="Rectangle">
