--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Assignment</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <h1>Shape it Off!</h1>
     <canvas id="Canvas" width="400" height="400"></canvas>
     <br>
     <input id="circle-button" type="button" value="Circle">
