--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Shape it Off!</h1>
     <canvas id="canvas" width="400" height="400"></canvas>
     <br>
     <input id="circle-button" type="button" value="Circle">
