add header documentation

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+Author: Goshanraj Govindaraj (#) & Arkel Ziko (#400586552)
+Date: Thursday, March 6, 2025 at 8:35 AM
+Description: The HTML for the Canvas Assignment
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
