--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ Description: The HTML for the Canvas Assignment
     <title>Canvas Assignment</title>
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox%3D%270%200%2064%2064%27%3E%3Cpath%20d%3D%27M...Z%27%20fill%3D%27%23000%27%2F%3E%3C%2Fsvg%3E"
+      type="image/png"
+      href="images/canvas-assignment-favicon.png"
     />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js"></script>
