fixed bug (ensures drawing is saved to history only if > 0)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Description: The HTML for the Canvas Assignment
 
         <div class="form-group">
           <label for="size-input">Width px:</label>
-          <input type="number" id="size-input" min="1" required />
+          <input type="number" id="size-input" min="1" value="25" required />
         </div>
       </div>
 
