--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ Description: The HTML for the Canvas Assignment
     <title>Canvas Assignment</title>
     <link
       rel="icon"
-      type="image/png"
-      href="images/paintbrush.jpg"
+      type="media/png"
+      href="media/paintbrush.jpg"
     />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js"></script>
