--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Description: The HTML for the Canvas Assignment
     <link
       rel="icon"
       type="media/png"
-      href="media/paintbrush.jpg"
+      href="media/images/paintbrush.jpg"
     />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js"></script>
